tests/pass/math_modulo.tk

fn main() -> i32 {
    auto x = 10 % 3
    return 0
}
